# genrt

./: .gitignore  LICENSE  README.md  environment.yml  guide.md  guide_updated.md  pyproject.toml  roadmap.md
configs/model/: geometry_encoder.yaml
configs/training/: phase1_h2_h2p.yaml  phase1_h2p.yaml  phase2_multi_mol.yaml  phase3_generalization.yaml
data/basis/: 2zap.1.nw  2zapa-nr-cv.0.nw  2zapa-nr-cv.1.nw  2zapa-nr.0.nw  2zapa-nr.1.nw  3-21g.0.nw  3-21g.1.nw  3zap.1.nw  3zapa-nr-cv.0.nw  3zapa-nr-cv.1.nw  3zapa-nr.0.nw  3zapa-nr.1.nw  4-31g.0.nw  4-31g.1.nw  4zap.1.nw  4zapa-nr-cv.0.nw  4zapa-nr-cv.1.nw  4zapa-nr.0.nw  4zapa-nr.1.nw  5-21g.1.nw  5zap.1.nw  5zapa-nr-cv.0.nw  5zapa-nr-cv.1.nw  5zapa-nr.0.nw  5zapa-nr.1.nw  6-21g.1.nw  6-31++g.0.nw  6-31++g.1.nw  6-31++g_st_.0.nw  6-31++g_st_.1.nw  6-31++g_st__st_-j.0.nw  6-31++g_st__st_.0.nw  6-31++g_st__st_.1.nw  6-31+g.0.nw  6-31+g.1.nw  6-31+g_st_-j.0.nw  6-31+g_st_.0.nw  6-31+g_st_.1.nw  6-31+g_st__st_.0.nw  6-31+g_st__st_.1.nw  (+842 more)
docs/: users_guide.md
notebooks/: 01_data_exploration.ipynb  02_model_debugging.ipynb  03_results_analysis.ipynb
scripts/: convert_nwchem.py  evaluate.py  train.py
src/: __init__.py
src/data/: __init__.py  dataset.py  nwchem_parser.py  simulation_index.py  trajectory.py  transforms.py
src/inference/: __init__.py  predictor.py  reanchor.py  uncertainty.py
src/models/: __init__.py  decoder.py  density_encoder.py  dynamics.py  field_encoder.py  full_model.py  geometry_encoder.py
src/physics/: __init__.py  constraints.py  observables.py  projections.py
src/training/: __init__.py  curriculum.py  losses.py  trainer.py
src/utils/: __init__.py  complex_tensor.py  graph.py  metrics.py  visualization.py
tests/: __init__.py  conftest.py  test_data.py  test_equivariance.py  test_inference.py  test_metrics.py  test_model.py  test_physics.py  test_training.py  test_visualization.py
